--- a/References.ipynb
+++ b/References.ipynb
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.norm.ppf(a, loc = mu, scale = sd)"
+    "sp.stats.norm.ppf(1-a, loc = mu, scale = sd)"
    ]
   }
  ],
