--- a/References.ipynb
+++ b/References.ipynb
@@ -323,7 +323,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.norm.ppf(1-a, loc = mu, scale = sd)"
+    "sp.stats.norm.ppf(a, loc = mu, scale = sd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef5f4b6e",
+   "metadata": {},
+   "source": [
+    "### Probability computations for binomial random variables.\n",
+    "\n",
+    "Let $Y$ be a binomial random variable with $n=\\verb|n|$ and $p = \\verb|p|$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "599ddbd0",
+   "metadata": {},
+   "source": [
+    "$\\verb|sp.stats.binom.pmf|$ computes $P\\{Y= a\\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cc7f440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.binom.pmf(a,n,p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff4ea0d8",
+   "metadata": {},
+   "source": [
+    "$\\verb|sp.stats.binom.cdf|$ computes $P\\{Y\\leq a\\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c960a77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.binom.cdf(a,n,p)"
    ]
   }
  ],
