--- a/References.ipynb
+++ b/References.ipynb
@@ -328,6 +328,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d6f1cdb",
+   "metadata": {},
+   "source": [
+    "$\\verb|sp.stats.norm.interval|$ computes the $100(1-a)$th percentile confidence interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4954c47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.norm.interval(1-a, loc = mu, scale = sd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ef5f4b6e",
    "metadata": {},
    "source": [
@@ -374,12 +392,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0054cdd1",
+   "metadata": {},
+   "source": [
+    "$\\verb|sp.stats.binom.interval|$ computes the $100(1-a)$th percentile confidence interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff34d16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.norm.interval(1-a,n,p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "942fad82",
    "metadata": {},
    "source": [
     "### Probability computations for random variables with a Student's t-distribution.\n",
     "\n",
-    "Let $T_n$ be a random variable with a Student's t-distribution with $n$ degrees of freedom."
+    "Let $T_n$ be a random variable with a Student's t-distribution with $n$ degrees of freedom, $\\mu =\\verb|mu|$, and $\\sigma =\\verb|sd|$"
    ]
   },
   {
@@ -397,7 +433,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.t.ppf(1-a, n)"
+    "sp.stats.t.ppf(1-a, n, loc = mu, scale = sd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c99a2c7",
+   "metadata": {},
+   "source": [
+    "$\\verb|sp.stats.t.interval|$ computes the $100(1-a)$th percentile confidence interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c50cca7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.t.interval(1-a, n, loc = mu, scale = sd)"
    ]
   }
  ],
