--- a/References.ipynb
+++ b/References.ipynb
@@ -395,7 +395,7 @@
    "id": "0054cdd1",
    "metadata": {},
    "source": [
-    "$\\verb|sp.stats.binom.interval|$ computes the $100(1-a)$th percentile confidence interval"
+    "$\\verb|sp.stats.binom.interval|$ computes the $100(1-a)$th percentile confidence interval with equal areas around the median"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "id": "5c99a2c7",
    "metadata": {},
    "source": [
-    "$\\verb|sp.stats.t.interval|$ computes the $100(1-a)$th percentile confidence interval"
+    "$\\verb|sp.stats.t.interval|$ computes the $100(1-a)$th percentile confidence interval with equal areas around the median"
    ]
   },
   {
