--- a/References.ipynb
+++ b/References.ipynb
@@ -313,7 +313,7 @@
    "id": "60bc322a",
    "metadata": {},
    "source": [
-    "$\\verb|sp.stats.norm.ppf|$ computes $z_a$ where $P\\{X>z_a\\}>a$, the $100(1-a)$th percentile"
+    "$\\verb|sp.stats.norm.ppf|$ computes $z_\\alpha$ where $P\\{X>z_\\alpha\\}>\\alpha$, the $100(1-\\alpha)$th percentile"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.norm.ppf(1-a, loc = mu, scale = sd)"
+    "sp.stats.norm.ppf(1-alpha, loc = mu, scale = sd)"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "id": "2d6f1cdb",
    "metadata": {},
    "source": [
-    "$\\verb|sp.stats.norm.interval|$ computes the $100(1-a)$th percentile confidence interval"
+    "$\\verb|sp.stats.norm.interval|$ computes the $100(1-\\alpha)$th percentile confidence interval"
    ]
   },
   {
@@ -341,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.norm.interval(1-a, loc = mu, scale = sd)"
+    "sp.stats.norm.interval(1-alpha, loc = mu, scale = sd)"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "id": "0054cdd1",
    "metadata": {},
    "source": [
-    "$\\verb|sp.stats.binom.interval|$ computes the $100(1-a)$th percentile confidence interval with equal areas around the median"
+    "$\\verb|sp.stats.binom.interval|$ computes the $100(1-\\alpha)$th percentile confidence interval with equal areas around the median"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.norm.interval(1-a,n,p)"
+    "sp.stats.norm.interval(1-alpha,n,p)"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.t.ppf(1-a, n, loc = mu, scale = sd)"
+    "sp.stats.t.ppf(1-alpha, n, loc = mu, scale = sd)"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "id": "5c99a2c7",
    "metadata": {},
    "source": [
-    "$\\verb|sp.stats.t.interval|$ computes the $100(1-a)$th percentile confidence interval with equal areas around the median"
+    "$\\verb|sp.stats.t.interval|$ computes the $100(1-\\alpha)$th percentile confidence interval with equal areas around the median"
    ]
   },
   {
@@ -451,7 +451,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.t.interval(1-a, n, loc = mu, scale = sd)"
+    "sp.stats.t.interval(1-alpha, n, loc = mu, scale = sd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f9068cc",
+   "metadata": {},
+   "source": [
+    "### Probability computations for random variables with a chi-squared distribution.\n",
+    "\n",
+    "Let $X$ be a random variable with a chi-squared distribution with $k$ degrees of freedome"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c23e773d",
+   "metadata": {},
+   "source": [
+    "$\\verb|sp.stats.chi2.cdf|$ computes $P\\{X\\leq a\\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "461fa2c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.chi2.cdf(a,k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b93d5d1",
+   "metadata": {},
+   "source": [
+    "$\\verb|sp.stats.chi2.ppf|$ computes $\\chi^2_{k,\\alpha}$ where $P\\{X\\geq \\chi^2_{k,\\alpha}\\}>\\alpha$, the $100(1-\\alpha)$th percentile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a54eeea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.binom.ppf(1-alpha,k)"
    ]
   }
  ],
