--- a/24-Chi_Squared.ipynb
+++ b/24-Chi_Squared.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "## Examples\n",
     "\n",
-    "1. In a certain county, it has been historically accepted that 52 percent of the patients who go to hospital emergency rooms are in stable condition, 32 percent are in serious condition, and 16 percent are in critical condition. However,a particular county hospital feels that its percentages are different. To prove its claim, the hospital has randomly selected a sample of 300 patients wh ohave visited its emergency room in the past 6 months. The numbers falling in each groupin areas follows:\n",
+    "1. In a certain county, it has been historically accepted that 52 percent of the patients who go to hospital emergency rooms are in stable condition, 32 percent are in serious condition, and 16 percent are in critical condition. However,a particular county hospital feels that its percentages are different. To prove its claim, the hospital has randomly selected a sample of 300 patients who have visited its emergency room in the past 6 months. The numbers falling in each grouping are as follows:\n",
     " \n",
     " |Condition | Count|\n",
     " |----------|------|\n",
