--- a/References.ipynb
+++ b/References.ipynb
@@ -497,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.binom.ppf(1-alpha,k)"
+    "sp.stats.chi2.ppf(1-alpha,k)"
    ]
   }
  ],
