--- a/References.ipynb
+++ b/References.ipynb
@@ -499,6 +499,26 @@
    "source": [
     "sp.stats.chi2.ppf(1-alpha,k)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8be927f",
+   "metadata": {},
+   "source": [
+    "### Chi-Squared Test for Independence \n",
+    "\n",
+    "To compute the values associated with a chi-squared test for independence, use $\\verb|sp.stats.chi2_contingency|$ applied to a dataframe $\\verb|data|$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecfff1e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.stats.chi2_contigency(data)"
+   ]
   }
  ],
  "metadata": {
