--- a/References.ipynb
+++ b/References.ipynb
@@ -517,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.stats.chi2_contigency(data)"
+    "sp.stats.chi2_contingency(data)"
    ]
   }
  ],
